<resources>

    <string name="google_maps_key">AIzaSyDcr1GwOQANLcUyyWxqkuJgMzObpuqlg3s</string>


    <string name="app_name">Araba</string>
    <string name="please_wait">Please Wait !</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="arabic">عربى</string>
    <string name="send_otp">Send Otp</string>
    <string name="enter_mobile_no">Enter Mobile No</string>
    <string name="please_while_we_verify_your_mobile_number">Please while we verify your mobile number</string>
    <string name="resend">ReSend</string>
    <string name="send">Send</string>
    <string name="one_time_password">One Time Password</string>
    <string name="use_this_location">Use this Location</string>
    <string name="error_msg_location">We anable to rech your Location !</string>
    <string name="please_enter_mobile_no">Please Enter Your Mobile No !</string>
    <string name="please_enter_otp">Please Enter OTP</string>
    <string name="there_is_not_any_item">There is not any Item !</string>
</resources>
